# career-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  app_tools.py  email_handler.py  main.py  person.py  pyproject.toml  requirements.txt
