[project]
name = "career-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "gradio>=5.49.1",
    "openai>=2.3.0",
    "pydantic>=2.11.10",
    "pypdf>=6.1.1",
    "ruff>=0.14.0",
    "uvicorn>=0.37.0",
]
